--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,17 @@
-# redirect to public page
-  <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{REQUEST_URI} !^public$
-    RewriteCond %{REQUEST_URI} !^/.well-known/acme-challenge [NC]
-    RewriteRule "^(.*)$" "/public/" [R=301,L]
-  </IfModule>
 
-# disable directory browsing
-# For security reasons, Option all cannot be overridden.
+## by default opensourcepos uses only apache2 rules and close related tricks.. 
+## if you already wants that uncomment those lines 
+## and property setup rewrite path (if you do not hijacked root webserver)
+## due all are redirect to public page in public directory for security issues
+#  <IfModule mod_rewrite.c>
+#    RewriteEngine On
+#    RewriteCond %{REQUEST_URI} !^public$
+#    RewriteCond %{REQUEST_URI} !^/.well-known/acme-challenge [NC]
+#    RewriteRule "^(.*)$" "/public/" [R=301,L]
+#  </IfModule>
+
+## disable directory browsing
+## For security reasons, Option all cannot be overridden.
 Options +ExecCGI +Includes +IncludesNOEXEC +SymLinksIfOwnerMatch -Indexes
 
 # prevent folder listing
